<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_theme"
            android:title="@string/theme"
            android:icon="@drawable/ic_theme"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_password_settings"
            android:title="@string/password_settings"
            app:showAsAction="never"/>

    <item
            android:id="@+id/action_logout"
            android:title="@string/logout"
            app:showAsAction="never"/>

    <item
            android:id="@+id/action_settings"
            android:title="@string/settings"
            app:showAsAction="never"/>

    <item
            android:id="@+id/action_history"
            android:title="@string/history"
            app:showAsAction="never"
            android:orderInCategory="100"/>
</menu>