<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="16dp">

    <EditText
            android:id="@+id/etOldPassword"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:autofillHints=""
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:background="@drawable/input_background"
            android:padding="16dp"
            android:layout_marginBottom="8dp"/>

    <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:autofillHints=""
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:background="@drawable/input_background"
            android:padding="16dp"
            android:layout_marginBottom="8dp"/>

    <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:autofillHints=""
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword"
            android:background="@drawable/input_background"
            android:padding="16dp"/>

</LinearLayout>